# agilent-8164b

./: .gitignore  README.md  agilent_8164b.py  pyproject.toml
examples/: wavelength_scan.py
src/agilent_8164b/: __init__.py  instrument.py
