[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agilent-8164b"
version = "0.1.0"
description = "Python driver for the Keysight/Agilent 8164B Lightwave Measurement System"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "pyvisa>=1.11",
]

[project.optional-dependencies]
examples = [
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
